qcl/monomorphizer/extension/modules.hh

    // Polymorphic template construction:
    PolyModID new_polymorphic_module(
        char* mv_template_name,
        size_t bv_def_id_count,
        GDefID* mv_bv_def_id_array
    );
    // add_field pushes a field and returns the field's unique index.
    size_t add_poly_module_field(
        PolyModID template_id,
        GDefID field_def_id
    );
    size_t get_mono_mod_field_count(PolyModID poly_mod_id);
    GDefID get_mono_mod_field_at(MonoModID mono_mod_id, size_t field_index);
    GDefID get_poly_mod_field_at(PolyModID poly_mod_id, size_t field_index);
    GDefID get_poly_mod_formal_arg_at(PolyModID poly_mod_id, size_t arg_index);
    // instantiation: 
    // turn a PolyModID into a MonoModID using some template arguments.
    MonoModID instantiate_poly_mod(
        PolyModID poly_mod_id,
        arg_list::ArgListID arg_list_id
    );
    size_t count_registered_lambdas(MonoModID mono_mod_id);
    mast::ExpID get_registered_lambda_at(
        MonoModID mono_mod_id,
        size_t lambda_index
    );
    // system info:
    size_t count_all_mono_modules();