qcl/monomorphizer/wrapper.pyx


# mast: type-specs:
cdef:
    TypeSpecID w_get_unit_ts():
        return get_unit_ts()
    TypeSpecID w_new_gid_ts(GDefID def_id):
        return new_gid_ts(def_id)
    TypeSpecID w_new_lid_ts(IntStr int_str_id):
        return new_lid_ts(int_str_id)
    TypeSpecID w_new_ptr_ts(TypeSpecID ptd_ts, bint contents_is_mut):
        return new_ptr_ts(ptd_ts, contents_is_mut)
    TypeSpecID w_new_array_ts(TypeSpecID ptd_ts, ExpID count_exp, bint contents_is_mut):
        return new_array_ts(ptd_ts, count_exp, contents_is_mut)
    TypeSpecID w_new_slice_ts(TypeSpecID ptd_ts, bint contents_is_mut):
        return new_slice_ts(ptd_ts, contents_is_mut)
    TypeSpecID w_new_func_sgn_ts(TypeSpecID arg_ts, TypeSpecID ret_ts, SES ret_ses):
        return new_func_sgn_ts(arg_ts, ret_ts, ret_ses)
    TypeSpecID w_new_tuple_ts(size_t elem_ts_count, TypeSpecID* mv_elem_ts_array):
        return new_tuple_ts(elem_ts_count, mv_elem_ts_array)
    TypeSpecID w_new_get_mono_module_field_ts(MonoModID mono_mod_id, size_t ts_field_ix):
        return new_get_mono_module_field_ts(mono_mod_id, ts_field_ix)
    TypeSpecID w_new_get_poly_module_field_ts(
        PolyModID poly_mod_id,
        size_t ts_field_ix,
        size_t actual_arg_count,
        NodeID* actual_arg_array
    ):
        return new_get_poly_module_field_ts(
            poly_mod_id,
            ts_field_ix,
            actual_arg_count,
            actual_arg_array
        )

# mast: elem:
cdef:
    ElemID w_new_bind1v_elem(GDefID bound_def_id, ExpID init_exp_id):
        return new_bind1v_elem(bound_def_id, init_exp_id)
        
    ElemID w_new_bind1t_elem(GDefID bound_def_id, TypeSpecID init_ts_id):
        return new_bind1t_elem(bound_def_id, init_ts_id)

    ElemID w_new_do_elem(ExpID eval_exp_id):
        return new_do_elem(eval_exp_id)

# mast: common:
cdef:
    NodeKind w_get_node_kind(NodeID node_id):
        return get_node_kind(node_id)
    
    NodeInfo* w_get_info_ptr(NodeID node_id):
        return get_info_ptr(node_id)

    bint w_is_node_exp_not_ts(NodeID node_id):
        return is_node_exp_not_ts(node_id)

# defs: global and unscoped
cdef:
    # constructor:
    GDefID w_declare_global_def(DefKind kind, char* mv_bound_name):
        return declare_global_def(kind, mv_bound_name)

    # functions to query definition info:
    bint w_get_def_is_bv(GDefID def_id):
        return get_def_is_bv(def_id)
    DefKind w_get_def_kind(GDefID def_id):
        return get_def_kind(def_id)
    const char* w_get_def_name(GDefID def_id):
        return get_def_name(def_id)
    size_t w_get_def_target(GDefID def_id):
        return get_def_target(def_id)
    void w_set_def_target(GDefID def_id, size_t target):
        set_def_target(def_id, target)

# modules:
cdef:
    # Polymorphic template construction:
    PolyModID w_new_polymorphic_module(char* mv_template_name, size_t bv_def_id_count, GDefID* mv_bv_def_id_array):
        return new_polymorphic_module(mv_template_name, bv_def_id_count, mv_bv_def_id_array)
    # add_field pushes a field and returns the field's unique index.
    size_t w_add_poly_module_field(PolyModID template_id, GDefID field_def_id):
        return add_poly_module_field(template_id, field_def_id)

    # Module fields are accessed by an index that is determined by the order
    # in which symbols are added.
    # By convention, this should be the order in which source nodes are written
    # in source code.
    GDefID w_get_poly_mod_field_at(PolyModID poly_mod_id, size_t field_index):
        return get_poly_mod_field_at(poly_mod_id, field_index)
    GDefID w_get_poly_mod_formal_arg_at(PolyModID poly_mod_id, size_t field_index):
        return get_poly_mod_formal_arg_at(poly_mod_id, field_index)
    size_t w_get_mono_mod_field_count(MonoModID mono_mod_id):
        return get_mono_mod_field_count(mono_mod_id)
    GDefID w_get_mono_mod_field_at(MonoModID mono_mod_id, size_t field_index):
        return get_mono_mod_field_at(mono_mod_id, field_index)

    # instantiation:
    # turn a PolyModID into a MonoModID using some template arguments.
    MonoModID w_instantiate_poly_mod(PolyModID poly_mod_id, ArgListID arg_list_id):
        return instantiate_poly_mod(poly_mod_id, arg_list_id)

    # mono module count:
    size_t w_count_all_mono_modules():
        return count_all_mono_modules()

    size_t w_count_registered_lambdas(MonoModID mono_mod_id):
        return count_registered_lambdas(mono_mod_id)
    
    ExpID w_get_registered_lambda_at(MonoModID mono_mod_id, size_t index):
        return get_registered_lambda_at(mono_mod_id, index)


# interning:
cdef:
    IntStr w_intern_string_1(cpp_string s, bint is_id_tid_not_vid):
        return intern_string(s, is_id_tid_not_vid)
    IntStr w_intern_string_2(const char* nt_bytes, bint is_id_tid_not_vid):
        s = cpp_string(nt_bytes)
        return intern_string(s, is_id_tid_not_vid)

# printing:
cdef:
    void w_print_poly_mod(PolyModID poly_mod_id):
        print_poly_mod(poly_mod_id)
    void w_print_mono_mod(MonoModID mono_mod_id):
        print_mono_mod(mono_mod_id)

# arg list:
cdef:
    ArgListID w_empty_arg_list_id():
        return empty_arg_list_id()


# MType:
cdef:
    TID w_get_unit_tid():
        return get_unit_tid()
    TID w_get_u1_tid():
        return get_u1_tid()
    TID w_get_u8_tid():
        return get_u8_tid()
    TID w_get_u16_tid():
        return get_u16_tid()
    TID w_get_u32_tid():
        return get_u32_tid()
    TID w_get_u64_tid():
        return get_u64_tid()
    TID w_get_s8_tid():
        return get_s8_tid()
    TID w_get_s16_tid():
        return get_s16_tid()
    TID w_get_s32_tid():
        return get_s32_tid()
    TID w_get_s64_tid():
        return get_s64_tid()
    TID w_get_f32_tid():
        return get_f32_tid()
    TID w_get_f64_tid():
        return get_f64_tid()
    TID w_get_string_tid():
        return get_string_tid()
    TID w_get_tuple_tid(ArgListID arg_list_id):
        return get_tuple_tid(arg_list_id)
    TID w_get_ptr_tid(TID ptd_tid, bint contents_is_mut):
        return get_ptr_tid(ptd_tid, contents_is_mut)
    TID w_get_array_tid(TID ptd_tid, VID count_val_id, bint contents_is_mut):
        return get_array_tid(ptd_tid, count_val_id, contents_is_mut)
    TID w_get_slice_tid(TID ptd_tid, bint contents_is_mut):
        return get_slice_tid(ptd_tid, contents_is_mut)
    TID w_get_function_tid(TID arg_tid, TID ret_tid, SES ses):
        return get_function_tid(arg_tid, ret_tid, ses)

# MVal:
cdef:
    ValueKind w_value_kind(VID value_id):
        return value_kind(value_id)
    ValueInfo w_value_info(VID value_id):
        return value_info(value_id)
    size_t w_get_seq_count(VID value_id):
        return get_seq_count(value_id)
    bint w_get_seq_elem1(size_t seq_info_index, size_t index, VID* out_vid):
        return get_seq_elem1_compatibility(seq_info_index, index, out_vid)
    bint w_get_seq_elem2(size_t tuple_val_id, size_t index, VID* out_vid):
        return get_seq_elem2_compatibility(tuple_val_id, index, out_vid)
    FuncInfo* w_get_func_info(size_t func_info_index):
        return get_func_info(func_info_index)
    VCellID w_get_ptr_vcell(VID val_id):
        return get_ptr_vcell(val_id)
    VCellID w_get_array_vcell(VID val_id, size_t index):
        return get_array_vcell(val_id, index)
    VCellID w_get_slice_vcell(VID val_id, size_t index):
        return get_slice_vcell(val_id, index)
    bint w_equals(VID v1, VID v2):
        return equals(v1, v2)


#
#
# Python wrappers (for export) (once system is static)
#
#
